--- a/client/src/Page/CourseDetail/CourseDetail.scss
+++ b/client/src/Page/CourseDetail/CourseDetail.scss
@@ -1,19 +1,19 @@
 // src/components/CourseDetail/CourseDetail.scss
 .course-detail {
-    padding: 20px;
-
-    .course-content {
-        margin-top: 20px;
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
-        }
+  padding: 20px;
+  background: "#f0f0f00";
+  .course-content {
+    margin-top: 20px;
+    ul {
+      list-style-type: disc;
+      padding-left: 20px;
     }
+  }
 
-    .course-additional-info {
-        margin-top: 40px;
-        .ant-card {
-            margin-bottom: 20px;
-        }
+  .course-additional-info {
+    margin-top: 40px;
+    .ant-card {
+      margin-bottom: 20px;
     }
+  }
 }
