--- a/client/src/Page/CourseDetail/CourseDetail.scss
+++ b/client/src/Page/CourseDetail/CourseDetail.scss
@@ -16,4 +16,14 @@
       margin-bottom: 20px;
     }
   }
+  Col {
+    Card {
+    }
+  }
+  span {
+    .course-detail-min {
+      color: #a7aeab;
+      font-weight: bold;
+    }
+  }
 }
