14th giao diện chứng chỉ

--- a/client/src/Page/CourseDetail/CourseDetail.scss
+++ b/client/src/Page/CourseDetail/CourseDetail.scss
@@ -16,13 +16,10 @@
       margin-bottom: 20px;
     }
   }
-  Col {
-    Card {
-    }
-  }
+
   span {
     .course-detail-min {
-      color: #a7aeab;
+      color: #41a5db;
       font-weight: bold;
     }
   }
