--- a/client/src/Page/Home/HomePage.scss
+++ b/client/src/Page/Home/HomePage.scss
@@ -1,7 +1,7 @@
 .demo-logo {
   width: 120px;
   height: 31px;
-  background: rgba(237, 232, 232, 0.3);
+  background: rgba(190, 173, 173, 0.3);
   margin: 16px 28px 16px 0;
 }
 
@@ -19,7 +19,7 @@
   margin: 16px 0;
 }
 .content {
-  background-color: #70bcee; // Thay bằng mã màu trực tiếp
+  background-color: #ffffff; // Thay bằng mã màu trực tiếp
   padding: 24px;
   border-radius: 8px;
   display: grid;
