--- a/client/src/Page/Home/FeaturedCourses/FeaturedCourses.module.scss
+++ b/client/src/Page/Home/FeaturedCourses/FeaturedCourses.module.scss
@@ -86,4 +86,26 @@
     color: #f47425;
     font-weight: 600;
   }
+
+  &__loading,
+  &__error,
+  &__empty {
+    width: 100%;
+    min-height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__rating {
+    margin: 8px 0;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  &__reviewCount {
+    color: #666;
+    font-size: 14px;
+  }
 }
