--- a/client/src/Page/Home/LatestBlog/BlogSection.module.scss
+++ b/client/src/Page/Home/LatestBlog/BlogSection.module.scss
@@ -80,6 +80,8 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   .readMoreBtn {
