--- a/client/src/Page/Home/HomePage.scss
+++ b/client/src/Page/Home/HomePage.scss
@@ -26,8 +26,9 @@
 
   .course-list {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); // Sắp xếp 4 card trên một hàng
-    grid-gap: 16px; // Khoảng cách giữa các card
+    grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
+    grid-gap: 26px; // Khoảng cách giữa các card
+    overflow: auto; /* Nếu cần */
 
     .ant-card {
       width: 100%; // Chiều rộng của card là 100% của grid cell
