--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -1,6 +1,6 @@
 .course-card-container {
   width: 380px;
-  height: 230px;
+  height: auto;
   background: white;
   border-radius: 12px;
   overflow: hidden;
