--- a/client/src/Page/Introduce/Introduce.module.scss
+++ b/client/src/Page/Introduce/Introduce.module.scss
@@ -39,7 +39,8 @@
 }
 
 .hero {
-  height: 100vh;
+  height: 90vh;
+  width: 100%;
   background: linear-gradient(135deg, #1890ff 0%, #36cfc9 100%);
   display: flex;
   align-items: center;
