--- a/client/src/Page/Introduce/Introduce.module.scss
+++ b/client/src/Page/Introduce/Introduce.module.scss
@@ -41,12 +41,26 @@
 .hero {
   height: 90vh;
   width: 100%;
-  background: linear-gradient(135deg, #1890ff 0%, #36cfc9 100%);
+  background-image: url("https://edu3.sitebycat.com/wp-content/uploads/2021/11/khoa-hoc-lap-trinh-front-end.jpg");
+  background-size: cover;
+  background-position: center;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
   padding: 0 20px;
+  position: relative;
+  z-index: 1;
+}
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
 }
 
 .heroContent {
