--- a/client/src/components/Card/Card.scss
+++ b/client/src/components/Card/Card.scss
@@ -1,87 +1,95 @@
-.course-card-container {
-  width: 380px;
-  height: auto;
-  background: white;
-  border-radius: 12px;
-  overflow: hidden;
-  transition: all 0.3s ease;
-  border: 1px solid #e8e8e8;
-  cursor: pointer;
-  position: relative;
+.form_card {
+  transition: transform 0.3s ease-in-out, transform 0.3s ease;
 
-  &:hover {
-    transform: translateY(-4px);
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    border-color: #41a5db;
-  }
-
-  .course-image-wrapper {
-    position: relative;
-    width: 100%;
-    height: 130px;
+  .course-card-container {
+    width: 380px;
+    height: auto;
+    background: white;
+    border-radius: 12px;
     overflow: hidden;
+    transition: transform 0.3s ease-in-out, transform 0.3s ease;
+    border: 1px solid #e8e8e8;
+    cursor: pointer;
+    position: relative;
 
-    .course-image {
-      width: 50%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 15px;
-      padding: 10px;
+    &:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      border-color: #41a5db;
     }
 
-    .hot-label {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      font-size: 18px;
-      z-index: 1;
-    }
-  }
-
-  .course-content {
-    padding: 16px;
-
-    .course-title {
-      font-size: 16px;
-      font-weight: 600;
-      color: #333;
-      //   margin-bottom: ;
-      line-height: 1.4;
+    .course-image-wrapper {
+      position: relative;
+      width: 100%;
+      height: 130px;
       overflow: hidden;
-      text-overflow: ellipsis;
-      display: -webkit-box;
-      -webkit-line-clamp: 2;
-      -webkit-box-orient: vertical;
 
-      &.new-course {
-        color: #ff4d4f;
+      .course-image {
+        width: 50%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 15px;
+        padding: 10px;
+        transition: transform 0.9s ease, transform 0.5s ease-in-out;
+
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
+
+      .hot-label {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        font-size: 18px;
+        z-index: 1;
       }
     }
 
-    .course-metadata {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 8px;
+    .course-content {
+      padding: 16px;
 
-      .course-price {
+      .course-title {
+        font-size: 16px;
         font-weight: 600;
-        color: #f47425;
+        color: #333;
+        //   margin-bottom: ;
+        line-height: 1.4;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+
+        &.new-course {
+          color: #ff4d4f;
+        }
       }
 
-      .course-level {
-        display: inline-block;
-        font-weight: 600;
-        color: #db7c26;
-        font-size: 14px;
-        padding: 5px 10px;
-        background: #fff2b2;
-        border-radius: 9px;
+      .course-metadata {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 8px;
+
+        .course-price {
+          font-weight: 600;
+          color: #f47425;
+        }
+
+        .course-level {
+          display: inline-block;
+          font-weight: 600;
+          color: #db7c26;
+          font-size: 14px;
+          padding: 5px 10px;
+          background: #fff2b2;
+          border-radius: 9px;
+        }
       }
     }
   }
 }
-
 // <span className={styles.featuredCourses__level}>
 // Đăng ký: {course.enrollment_count?.toLocaleString() || 0}
 // </span>
