--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -19,14 +19,14 @@
     }
 
     .logo-icon {
-      padding: 10px;
+      // padding: 10px;
       border-radius: 50%;
-      font-size: 1.5rem;
-      margin-right: 10px;
+      font-size: 2.5rem;
+      // margin-right: 5px;
 
       img {
-        width: 50px;
-        height: 50px;
+        width: 100px;
+        height: auto;
       }
     }
 
