--- a/client/src/Page/Home/HomePage.scss
+++ b/client/src/Page/Home/HomePage.scss
@@ -48,6 +48,7 @@ $small-mobile-breakpoint: 576px;
   right: 0;
   // z-index: 1000;
   width: 100%;
+  // height: 10vh;
 
   .header-content {
     // display: flex;
