cập nhật bản mới mã giảm giá thành công2

--- a/client/src/Page/Home/HomePage.scss
+++ b/client/src/Page/Home/HomePage.scss
@@ -310,7 +310,7 @@ $small-mobile-breakpoint: 576px;
 // Featured Courses Section
 .featured-courses {
   padding: 40px 24px;
-  background-color: #f5f5f5;
+  background-color: #a7a1a1;
 
   @include mobile {
     padding: 24px 16px;
