--- a/client/src/Page/Home/LatestBlog/BlogSection.module.scss
+++ b/client/src/Page/Home/LatestBlog/BlogSection.module.scss
@@ -1,6 +1,6 @@
 .blogSection {
   padding: 3rem 0;
-  background-color: #f9fafb;
+  background-color: #b8bbbe;
 
   .container {
     max-width: 72rem;
