--- a/client/src/Page/Introduce/Introduce.module.scss
+++ b/client/src/Page/Introduce/Introduce.module.scss
@@ -1,13 +1,14 @@
 // App.module.scss
 .layout {
   min-height: 100vh;
+  background-color: #1890ff;
 }
 
 .header {
   position: fixed;
   width: 100%;
   z-index: 1000;
-  background: rgba(255, 255, 255, 0.95);
+  background: #ebeceb;
   padding: 0 50px;
   display: flex;
   justify-content: space-between;
@@ -80,11 +81,12 @@
 
 .stats {
   padding: 60px 50px;
-  background: #f5f5f5;
+  background: #eaeeed;
 
   .ant-card {
     text-align: center;
     transition: transform 0.3s;
+    border: #9c9b9b solid 1px;
 
     &:hover {
       transform: translateY(-5px);
@@ -94,7 +96,7 @@
 
 .features {
   padding: 80px 50px;
-  background: white;
+  background: #ebf1f1 !important;
 
   h2 {
     text-align: center;
@@ -128,7 +130,7 @@
 
 .learningPath {
   padding: 80px 50px;
-  background: #f5f5f5;
+  background: #ebf1f1 !important;
 
   h2 {
     text-align: center;
