--- a/client/src/components/ui/Progress.scss
+++ b/client/src/components/ui/Progress.scss
@@ -1,6 +1,6 @@
 .custom-progress {
   width: 100%;
-  background-color: #f3f3f3;
+  background-color: #b6edf0;
   border-radius: 8px;
   overflow: hidden;
 
