--- a/client/src/Page/MyCourses/MyCourses.module.scss
+++ b/client/src/Page/MyCourses/MyCourses.module.scss
@@ -191,3 +191,28 @@
     transform: rotate(360deg);
   }
 }
+
+.featuredCourses__progress {
+  width: 100%;
+  padding: 0.5rem;
+
+  &-container {
+    width: 100%;
+    background-color: #f0f0f0;
+    border-radius: 0.25rem;
+    overflow: hidden;
+  }
+
+  &-bar {
+    height: 0.5rem;
+    transition: width 0.5s ease-out;
+  }
+
+  &-text {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.25rem;
+    font-size: 0.75rem;
+    color: #666;
+  }
+}
