--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,4 +1,6 @@
 .header {
+  width: 100%; /* Đảm bảo header trải dài toàn bộ chiều ngang */
+  z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
